plugins/glide: Subdivide window quad grid

The way the glide effect works is that it takes 2D geometry and applies
the perspective projection to it on the CPU side. The reason we do it is
that the scene is 2D.

However, this leaves us with the well known problem where a texture
that's mapped to a trapezoid won't be correctly interpolated along the
diagonal.

It can addressed by performing a perspective division in the fragment
shader, but given the way the effect is structured, it's off the table. So
instead subdivide the window grid.

BUG: 488840


(cherry picked from commit 7eb9f75af22c4aeeb58e864772912ec060f79826)

Co-authored-by: Vlad Zahorodnii <vlad.zahorodnii@kde.org>